--- a/worker/Dockerfile.dev
+++ b/worker/Dockerfile.dev
@@ -1,11 +1,6 @@
-FROM node
-
-WORKDIR '/app'
-
-COPY package.json .
-
+FROM node:alpine
+WORKDIR "/app"
+COPY ./package.json ./
 RUN npm install
-
-COPY . . 
-
-CMD ["npm","run","dev"]
+COPY . .
+CMD ["npm", "run", "dev"]
